adding a game winner box

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- all required links -->
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8" />
@@ -12,7 +13,8 @@
 </head>
 
 <body>
-  <h1>Ultimate Tic Tac Toe</h1>
+  <h1>Ultimate Tic Tac Toe</h1> <!-- title -->
+
   <div style="margin: 1rem; font-size: 1.1rem;">
     <label for="game-mode" style="margin-right: 0.5rem;">Mode:</label>
     <select id="game-mode">
@@ -23,6 +25,8 @@
   </div>
 
   <div id="board"></div>
+
+  <div id="game-message" class="game-message-box"></div>
 
   <div style="margin-top: 1rem;">
     <button id="restart-button" style="padding: 6px 12px; font-size: 1rem;">
