--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   <label for="game-mode" style="margin-right: 0.5rem;">Mode:</label>
   <select id="game-mode">
     <option value="2p">2 Player</option>
-    <option value="easy">Versus AI (Easy)</option>
-    <option value="medium">versus AI (Medium)</option>
-    <option value="hard">Versus AI (Hard)</option>
+    <option value="easy">Easy AI</option>
+    <option value="medium">Medium AI</option>
+    <option value="hard">Hard AI</option>
   </select>
 
   <span id="ai-choice-container" style="display: none; margin-left: 1rem;">
