wrapping up game rules

--- a/index.html
+++ b/index.html
@@ -63,22 +63,31 @@
     <span id="close-rules">&times;</span>
     <h2>USER MANUAL</h2>
     <p>
-      Welcome to Ultimate Tic-Tac-Toe. Just like in 'regular' Tic-Tac-Toe, the aim is for you to make three in a row, taking turns with an opponent (human or AI). 
-      However, in this version, you need to win a 3x3 to even place an X/O!
-      <br><br>
-      The game starts with an empty board, and placing in any of the nine cells of an individual 'subgame'
+      Welcome to Ultimate Tic-Tac-Toe. Just like in 'regular' Tic-Tac-Toe, the aim is for you to make three in a row either of X or O, taking turns with an opponent (human or AI). 
+      As always, X goes first.
+      <br><br> 
+      However, in this version, you need to win a 3x3 'subgame' to place the actual X/O! This smaller game is won just like the original - 3 in a row. 
+      <br><br> 
+      The game starts with an empty board, and placing in any of the nine cells of an individual subgame,
       <img src="images/first_press.png" alt="first placement" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" /> moves the whole game to that block:
       <img src="images/respective.png" alt="subgame" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" />
-      This ensures that the next player plays in the new game, before they play their turn and move the game again. 
+      This ensures that the next player plays in the respective subgame, before they play their turn and move the subgame again. 
       <img src="images/next_turn.png" alt="next placement" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" /> 
       As mentioned before, making 3 in a row wins you a subgame, and automatically turns that cell into a big X/O: 
       <img src="images/first_win.png" alt="first win" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" />
-      If someone places in a cell that would take the next player to a game that has already been won, they are free to play anywhere 
-      (that isn't occupied) on the board. The game is completed once someone manages to not only win many subgames, but strategically choose ones that are three in a row.
+      If someone places in a cell that would take the next player to a subgame that has already been won, they are free to play <em>anywhere</em> 
+      (that isn't occupied) on the board. 
+      <br><br> 
+      The game is completed once someone manages to not only win many subgames, but strategically choose ones that are three in a row.
       <img src="images/endgame.png" alt="end game" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" />
-      Here, clearly <img src="images/Owin.png" alt="O wins" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" />
-      Good luck :)
     </p>
+
+    <div class="side-by-side">
+  <span>Here, clearly - </span>
+  <img src="images/Owin.png" alt="O wins" />
+  </div>
+  <p>Good luck! :)</p>
+
   </div>
 </div>
 
