improving phone look

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </div>
 
 
-<!-- Rules Modal -->
+<!-- Rules -->
 <div id="rules-modal" style="display: none;">
   <div id="rules-content">
     <span id="close-rules">&times;</span>
